# COMP-4981_Assignment_2_check_file_integrity

./: CMakeLists.txt  bit_handler.c  bit_handler.h  decode_checksum.c  decode_crc32.c  decode_parity.c  encode_checksum.c  encode_parity.c  input_handler.c  input_handler.h  readme.txt
